modules/ballerina-core/src/test/resources/samples/parser/invalidSyntax/ServiceWithoutResourceName.bal
package samples.parser;

service HelloService {

  @Path ("/tweet")
  // Following line is invalid.
  resource {
      int b;
      reply m;
  }
}
